--- a/message_settings.json
+++ b/message_settings.json
@@ -9,6 +9,7 @@
     "Message Pinned": "تم تثبيت الرسالة",
     "Message Unpinned": "تم إلغاء تثبيت الرسالة",
     "Copy Message": "نسخ الرسالة",
+    "Copy Text": "نسخ النص",
     "Copy Message Link": "نسخ رابط الرسالة",
     "Forward Message": "إعادة توجيه الرسالة",
     "Reply to Message": "الرد على الرسالة",
