--- a/user_settings.json
+++ b/user_settings.json
@@ -1,6 +1,11 @@
 {
     "User Settings": "إعدادات المستخدم",
     "Account": "الحساب",
+    "My Account": "حسابي",
+    "Profiles": "الملفات الشخصية",
+    "Authorised Apps": "التطبيقات المعتمدة",
+    "Devices": "الأجهزة",
+    "Clips": "المقاطع",
     "Privacy & Safety": "الخصوصية والأمان",
     "Authorized Apps": "التطبيقات المصرح بها",
     "Connections": "الاتصالات",
@@ -13,6 +18,9 @@
     "Language": "اللغة",
     "Overlay": "التراكب",
     "Advanced Settings": "إعدادات متقدمة",
+    "Windows Settings": "إعدادات ويندوز",
+    "Streamer Mode": "وضع البث",
+    "Log Out": "تسجيل الخروج",  
     "Logout": "تسجيل الخروج",
     "Save Changes": "حفظ التغييرات",
     "Cancel": "إلغاء",
