--- a/advanced_settings.json
+++ b/advanced_settings.json
@@ -38,6 +38,8 @@
     "Cache Management": "إدارة ذاكرة التخزين المؤقت",
     "Experimental": "تجريبي",
     "Enable Experimental Features": "تمكين الميزات التجريبية",
+    "Updates": "التحديثات",
+    "Plugins": "الإضافات",  
     "Legacy": "قديم",
     "System Diagnostics": "تشخيص النظام",
     "API Access": "الوصول إلى API",
