--- a/settings_modals.json
+++ b/settings_modals.json
@@ -49,6 +49,13 @@
     "Update Settings": "تحديث الإعدادات",
     "Failed to Update Settings": "فشل في تحديث الإعدادات",
     "Edit Settings": "تحرير الإعدادات",
+    "Updates": "التحديثات",
+    "Custom CSS": "تعديل CSS",
+    "Plugins": "الإضافات",
+    "Themes": "السمات",
+    "What’s New": "ما الجديد",
+    "Merch": "البضائع",
+    "Log Out": "تسجيل الخروج",  
     "Save Settings": "حفظ الإعدادات",
     "Modal Actions": "إجراءات النافذة",
     "Modal Content": "محتوى النافذة",
