--- a/user_settings.json
+++ b/user_settings.json
@@ -93,6 +93,25 @@
     "Manage Privacy": "إدارة الخصوصية",
     "Manage Safety": "إدارة الأمان",
     "Manage Voice & Video": "إدارة الصوت والفيديو",
+    "Activity Privacy": "خصوصية النشاط",
+    "Registered Games": "الألعاب المسجلة",
+    "Game Overlay": "تراكب اللعبة",  
     "Manage Language": "إدارة اللغة",
-    "Save Settings": "حفظ الإعدادات"
+    "Save Settings": "حفظ الإعدادات",
+    "Your computer doesn’t meet the minimum specifications for Clips. Performance may be impacted if you enable Clips.": "جهاز الكمبيوتر الخاص بك لا يفي بالحد الأدنى من المواصفات لتشغيل المقاطع. قد تتأثر الأداء إذا قمت بتمكين المقاطع.",
+    "Enable Clipping": "تمكين القص",
+    "Enables you to capture clips while you’re streaming by using the clipping keybind.": "يتيح لك التقاط المقاطع أثناء البث باستخدام مفتاح القص المحدد.",
+    "Please note that clips are currently captured at the same quality as your stream when streaming.": "يرجى ملاحظة أن المقاطع يتم التقاطها حاليًا بنفس جودة البث عند البث.",
+    "Clip Length": "طول المقطع",
+    "By default, clips are 30 seconds long.": "افتراضيًا، يبلغ طول المقاطع 30 ثانية.",
+    "Clip Resolution": "دقة المقطع",
+    "This is the maximum resolution your clips will be recorded in.": "هذه هي أعلى دقة سيتم تسجيل مقاطعك بها.",
+    "Clip Frame Rate": "معدل الإطارات للمقطع",
+    "This is the maximum frame rate your clips will be recorded at.": "هذا هو الحد الأقصى لمعدل الإطارات الذي سيتم تسجيل المقاطع به.",
+    "Clipping Keybind": "مفتاح القص",
+    "Set up your keybind to capture clips. The default is ALT + C.": "قم بإعداد مفتاح لالتقاط المقاطع. الافتراضي هو ALT + C.",
+    "Storage Location": "موقع التخزين",
+    "Choose where to store your clips.": "اختر مكان حفظ المقاطع الخاصة بك.",
+    "Allow my voice to be recorded in Clips": "السماح بتسجيل صوتي في المقاطع",
+    "By turning on this setting, your voice may be included when someone in the same voice channel uses Clips.": "عند تفعيل هذا الإعداد، قد يتم تضمين صوتك عند استخدام شخص آخر في نفس القناة الصوتية للمقاطع."  
 }
