--- a/boost_settings.json
+++ b/boost_settings.json
@@ -108,6 +108,17 @@
     "Boost Subscription Expired": "اشتراك التعزيز منتهي",
     "Boost Subscription Renewed": "تم تجديد اشتراك التعزيز",
     "Boost Subscription Renewal Failed": "فشل تجديد اشتراك التعزيز",
+    "Perks": "المزايا",
+    "Level 1": "المستوى 1",
+    "Level 2": "المستوى 2",
+    "Level 3": "المستوى 3",
+    "Emoji Slots": "فتحات الإيموجي",
+    "Sticker Slots": "فتحات الملصقات",
+    "Soundboard Slots": "فتحات لوحة الصوت",
+    "Audio Quality": "جودة الصوت",
+    "Upload Size Limit": "حد حجم التحميل",
+    "Custom Role Icons": "أيقونات الأدوار المخصصة",
+    "Custom Invite Link": "رابط الدعوة المخصص",  
     "Boost Subscription Canceled": "تم إلغاء اشتراك التعزيز",
     "Boost Subscription Cancellation Failed": "فشل إلغاء اشتراك التعزيز",
     "Boost Subscription Upgrade Successful": "تمت ترقية اشتراك التعزيز بنجاح",
