--- a/user_settings.json
+++ b/user_settings.json
@@ -93,6 +93,14 @@
     "Manage Privacy": "إدارة الخصوصية",
     "Manage Safety": "إدارة الأمان",
     "Manage Voice & Video": "إدارة الصوت والفيديو",
+    "Chat Font Scaling": "ضبط حجم خط الدردشة",
+    "Space Between Message Groups": "المسافة بين مجموعات الرسائل",
+    "Zoom Level": "مستوى التكبير",
+    "Can’t find what you’re looking for? Check out the Accessibility settings.": "لا تستطيع العثور على ما تبحث عنه؟ تفقد إعدادات إمكانية الوصول.",  
+    "Who can send you a friend request?": "من يمكنه إرسال طلب صداقة إليك؟",
+    "Everyone": "الجميع",
+    "Friends of Friends": "أصدقاء الأصدقاء",
+    "Server Members": "أعضاء الخادم",  
     "Activity Privacy": "خصوصية النشاط",
     "Registered Games": "الألعاب المسجلة",
     "Game Overlay": "تراكب اللعبة",  
