--- a/user_settings.json
+++ b/user_settings.json
@@ -96,6 +96,7 @@
     "Chat Font Scaling": "ضبط حجم خط الدردشة",
     "Space Between Message Groups": "المسافة بين مجموعات الرسائل",
     "Zoom Level": "مستوى التكبير",
+    "Chat": "الدردشة",
     "Can’t find what you’re looking for? Check out the Accessibility settings.": "لا تستطيع العثور على ما تبحث عنه؟ تفقد إعدادات إمكانية الوصول.",  
     "Who can send you a friend request?": "من يمكنه إرسال طلب صداقة إليك؟",
     "Everyone": "الجميع",
