--- a/user_settings.json
+++ b/user_settings.json
@@ -95,10 +95,32 @@
     "Manage Voice & Video": "إدارة الصوت والفيديو",
     "Chat Font Scaling": "ضبط حجم خط الدردشة",
     "Space Between Message Groups": "المسافة بين مجموعات الرسائل",
+    "Enable Streamer Mode": "تفعيل وضع البث",
+    "You can set a keybind to toggle Streamer Mode in Keybind Settings.": "يمكنك تعيين مفتاح اختصار لتفعيل وضع البث في إعدادات اختصارات المفاتيح.",
+    "Automatically Enable/Disable": "التفعيل/التعطيل التلقائي",
+    "Automatically enable/disable Streamer Mode if OBS or XSplit are running on this computer.": "قم بتفعيل/تعطيل وضع البث تلقائيًا إذا كان OBS أو XSplit يعمل على هذا الكمبيوتر.",
+    "OPTIONS": "خيارات",
+    "Hide Personal Information": "إخفاء المعلومات الشخصية",
+    "Hides email, connected accounts and notes, and anonymises number tags.": "يخفي البريد الإلكتروني، الحسابات المتصلة والملاحظات، ويخفي الأرقام.",
+    "Hide Invite Links": "إخفاء روابط الدعوات",
+    "Recommended if you don't want random people accessing your Discord servers.": "يُوصى به إذا كنت لا تريد أن يصل أشخاص عشوائيون إلى خوادم Discord الخاصة بك.",
+    "Disable Sounds": "تعطيل الأصوات",
+    "All sound effects will be disabled.": "سيتم تعطيل جميع المؤثرات الصوتية.",
+    "All desktop notifications will be disabled.": "سيتم تعطيل جميع إشعارات سطح المكتب.",
+    "Hide Discord Window from Screen Capture": "إخفاء نافذة Discord من التقاط الشاشة",
+    "Hides most Discord windows from most screen capture software.": "يخفي معظم نوافذ Discord من معظم برامج التقاط الشاشة.",  
     "Zoom Level": "مستوى التكبير",
     "Chat": "الدردشة",
     "Can’t find what you’re looking for? Check out the Accessibility settings.": "لا تستطيع العثور على ما تبحث عنه؟ تفقد إعدادات إمكانية الوصول.",  
     "Who can send you a friend request?": "من يمكنه إرسال طلب صداقة إليك؟",
+    "System Start-Up Behaviour": "سلوك بدء تشغيل النظام",
+    "Open Discord": "فتح Discord",
+    "Save yourself a few clicks and let Discord greet you on computer start-up.": "وفر على نفسك بعض النقرات ودع Discord يرحب بك عند بدء تشغيل الكمبيوتر.",
+    "Start Minimized": "البدء مصغرًا",
+    "Discord starts in the background and keeps out of your way.": "يبدأ Discord في الخلفية ولا يزعجك.",
+    "Close Button": "زر الإغلاق",
+    "Minimize to Tray": "تصغير إلى علبة النظام",
+    "Hitting X will make Discord sit back and relax in your system tray when you close the app.": "النقر على X سيجعل Discord يستقر في علبة النظام عندما تغلق التطبيق.",  
     "Everyone": "الجميع",
     "Friends of Friends": "أصدقاء الأصدقاء",
     "Server Members": "أعضاء الخادم",  
