--- a/server_settings.json
+++ b/server_settings.json
@@ -84,6 +84,20 @@
     "Backup Created": "تم إنشاء النسخة الاحتياطية",
     "Backup Restored": "تم استعادة النسخة الاحتياطية",
     "Failed to Create Backup": "فشل في إنشاء النسخة الاحتياطية",
+    "Boost Server": "تعزيز الخادم",
+    "Invite Members": "دعوة الأعضاء",
+    "Server Insights": "تحليلات الخادم",
+    "Create Category": "إنشاء فئة",
+    "Create Event": "إنشاء حدث",
+    "Active Threads": "المواضيع النشطة",
+    "App Directory": "دليل التطبيقات",
+    "Show All Channels": "عرض جميع القنوات",
+    "Privacy Settings": "إعدادات الخصوصية",
+    "Edit Server Profile": "تعديل ملف الخادم",
+    "Hide Muted Channels": "إخفاء القنوات الصامتة",
+    "Security Actions": "إجراءات الأمان",
+    "Report Raid": "الإبلاغ عن غارة",
+    "Server Settings Overview": "نظرة عامة على إعدادات الخادم",
     "Failed to Restore Backup": "فشل في استعادة النسخة الاحتياطية",
     "Manage Server Settings": "إدارة إعدادات الخادم",
     "Server Settings Saved": "تم حفظ إعدادات الخادم",
