--- a/server_settings.json
+++ b/server_settings.json
@@ -88,6 +88,22 @@
     "Invite Members": "دعوة الأعضاء",
     "Server Insights": "تحليلات الخادم",
     "Create Category": "إنشاء فئة",
+    "Overview": "نظرة عامة",
+    "Emoji": "الإيموجي",
+    "Stickers": "الملصقات",
+    "Soundboard": "لوحة الأصوات",
+    "Custom Invite Link": "رابط الدعوة المخصص",
+    "Safety Setup": "إعدادات الأمان",
+    "Audit Log": "سجل التدقيق",
+    "Bans": "الحظر",
+    "Discovery": "استكشاف",
+    "Server Web Page": "صفحة ويب الخادم",
+    "Server Subscriptions": "اشتراكات الخادم",
+    "Server Products": "منتجات الخادم",
+    "Promo Page": "صفحة الترويج",
+    "Server Boost Status": "حالة تعزيز الخادم",
+    "Members": "الأعضاء",
+    "Invites": "الدعوات",
     "Create Event": "إنشاء حدث",
     "Active Threads": "المواضيع النشطة",
     "App Directory": "دليل التطبيقات",
@@ -98,8 +114,71 @@
     "Security Actions": "إجراءات الأمان",
     "Report Raid": "الإبلاغ عن غارة",
     "Server Settings Overview": "نظرة عامة على إعدادات الخادم",
+    "Upload Requirements": "متطلبات التحميل",
+    "File Type": "نوع الملف",
+    "Recommended File Size": "حجم الملف الموصى به",
+    "Recommended Dimensions": "الأبعاد الموصى بها",
+    "Naming": "التسمية",
+    "Remove Custom Invite Link": "إزالة رابط الدعوة المخصص",
+    "Invite URL": "رابط الدعوة",
+    "Inactive Timeout": "مهلة عدم النشاط",
+    "System Messages Channel": "قناة رسائل النظام",
+    "Only Mentions": "فقط الإشارات",  
     "Failed to Restore Backup": "فشل في استعادة النسخة الاحتياطية",
     "Manage Server Settings": "إدارة إعدادات الخادم",
     "Server Settings Saved": "تم حفظ إعدادات الخادم",
-    "Failed to Save Server Settings": "فشل في حفظ إعدادات الخادم"
+    "Failed to Save Server Settings": "فشل في حفظ إعدادات الخادم",
+    "Inactive Channel": "قناة غير نشطة",
+    "Inactive Time-out": "مهلة القناة غير النشطة",
+    "Send a random welcome message when someone joins this server": "إرسال رسالة ترحيبية عشوائية عندما ينضم شخص إلى هذا الخادم",
+    "Prompt members to reply to welcome messages with a sticker": "مطالبة الأعضاء بالرد على رسائل الترحيب باستخدام ملصق",
+    "Send a message when someone Boosts this server": "إرسال رسالة عندما يقوم شخص بدعم هذا الخادم",
+    "Send helpful tips for server setup": "إرسال نصائح مفيدة لإعداد الخادم",
+    "Send a message when someone purchases a Server Product or Server Subscription": "إرسال رسالة عندما يشتري شخص منتج خادم أو اشتراك خادم",
+    "Prompt members to reply to Server Subscription congratulation messages with a sticker": "مطالبة الأعضاء بالرد على رسائل تهنئة اشتراك الخادم باستخدام ملصق",
+    "Show Boost progress bar": "عرض شريط تقدم التعزيز",
+    "Server Banner Background": "خلفية راية الخادم",
+    "Unlocked": "مفتوح",
+    "Upload Background": "تحميل خلفية",
+    "Server Invite Background": "خلفية دعوة الخادم",
+    "Display Activity Feed in this server": "عرض موجز النشاطات في هذا الخادم",
+    "Default Notification Settings": "إعدادات الإشعارات الافتراضية",
+    "All Messages": "جميع الرسائل",
+    "Only @mentions": "فقط @الإشارات",
+    "Add up to 250 custom emojis that anyone can use in this server. Animated GIF emojis may be used by members with Discord Nitro.": "أضف حتى 250 إيموجي مخصص يمكن لأي شخص استخدامه في هذا الخادم. يمكن لأعضاء ديسكورد نيترو استخدام صور GIF المتحركة كإيموجي.",
+    "To manage premium emojis, go to Server Subscriptions settings.": "لإدارة الإيموجيات المميزة، انتقل إلى إعدادات اشتراكات الخادم.",
+    "UPLOAD REQUIREMENTS": "متطلبات التحميل",
+    "File type: JPEG, PNG, GIF": "نوع الملف: JPEG, PNG, GIF",
+    "Recommended file size: 256 KB (We’ll compress it for you)": "حجم الملف الموصى به: 256 كيلوبايت (سنقوم بضغطه لك)",
+    "Recommended dimensions: 128x128": "الأبعاد الموصى بها: 128x128",
+    "Naming: Emoji names must be at least 2 characters long and can only contain alphanumeric characters and underscores": "التسمية: يجب أن تحتوي أسماء الإيموجي على حرفين على الأقل ويمكن أن تحتوي فقط على أحرف أبجدية رقمية أو شرطة سفلية",
+    "Upload Emoji": "تحميل الإيموجي",
+    "Recent updates": "التحديثات الأخيرة",
+    "Looking for Rule Screening, Verification Level or AutoMod? We’ve re-organised them into this page": "تبحث عن فحص القواعد، مستوى التحقق أو التعديل التلقائي؟ لقد أعدنا تنظيمها في هذه الصفحة",
+    "We’ve also added a lot of safety tooling that you can check out below. Some highlights:": "لقد أضفنا أيضًا الكثير من أدوات الأمان التي يمكنك التحقق منها أدناه. بعض النقاط البارزة:",
+    "CAPTCHA is intelligently verifying joiners": "كابتشا يتحقق بذكاء من المنضمين",
+    "Suspicious joiners are automatically blocked during suspected raids": "يتم حظر المنضمين المشبوهين تلقائيًا أثناء الغارات المشتبه بها",
+    "We warn users before they follow any suspicious outbound links": "نحذر المستخدمين قبل اتباعهم لأي روابط خارجية مشبوهة",
+    "We send suspected spam DMs to a special Requests inbox": "نرسل الرسائل المباشرة المشتبه بها كبريد مزعج إلى صندوق طلبات خاص",
+    "Raid Protection and CAPTCHA": "حماية الغارات وكابتشا",
+    "3 of 3 enabled": "تم تمكين 3 من 3",
+    "DM and Spam Protection": "حماية الرسائل الخاصة والبريد المزعج",
+    "Community Settings": "إعدادات المجتمع",
+    "RULES OR GUIDELINES CHANNEL": "قناة القواعد أو الإرشادات",
+    "Please select the channel that hosts your rules. This channel will by default start from the top and will feature a special header.": "يرجى اختيار القناة التي تستضيف القواعد الخاصة بك. ستبدأ هذه القناة افتراضيًا من الأعلى وستظهر رأسًا خاصًا.",
+    "COMMUNITY UPDATES CHANNEL": "قناة تحديثات المجتمع",
+    "This is the channel where Discord will send relevant updates for Community admins and moderators. As some info might be sensitive, we recommend selecting a role-restricted channel.": "هذه هي القناة التي سيرسل فيها Discord التحديثات ذات الصلة إلى مشرفي المجتمع والمشرفين. نظرًا لأن بعض المعلومات قد تكون حساسة، نوصي باختيار قناة مقيدة بالأدوار.",
+    "SAFETY NOTIFICATIONS CHANNEL": "قناة إشعارات الأمان",
+    "This is the channel where Discord will send you important safety updates about your server. As some info might be sensitive, we recommend selecting a role-restricted channel.": "هذه هي القناة التي سيرسل فيها Discord تحديثات الأمان المهمة المتعلقة بخادمك. نظرًا لأن بعض المعلومات قد تكون حساسة، نوصي باختيار قناة مقيدة بالأدوار.",
+    "SERVER PRIMARY LANGUAGE": "اللغة الأساسية للخادم",
+    "This helps Discord customise features for you and your members.": "يساعد هذا Discord في تخصيص الميزات لك ولأعضاء خادمك.",  
+    "5 of 6 enabled": "تم تمكين 5 من 6",
+    "AutoMod": "التعديل التلقائي",
+    "5 of 7 enabled": "تم تمكين 5 من 7",
+    "DISABLE COMMUNITY": "تعطيل المجتمع",
+    "This will remove specific features for Community Servers, like Server Discovery and Server Insights.": "سيؤدي ذلك إلى إزالة ميزات محددة لخوادم المجتمع، مثل اكتشاف الخادم وإحصاءات الخادم.",
+    "Disable Community": "تعطيل المجتمع",  
+    "Antoents": "الأنتونات",
+    "2 of 2 enabled": "تم تمكين 2 من 2",
+    "Edit": "تحرير"  
 }
