--- a/message_settings.json
+++ b/message_settings.json
@@ -72,6 +72,10 @@
     "Message Visibility": "ظهور الرسائل",
     "Show Messages": "عرض الرسائل",
     "Hide Messages": "إخفاء الرسائل",
+    "Copy Image": "نسخ الصورة",
+    "Save Image": "حفظ الصورة",
+    "Copy Link": "نسخ الرابط",
+    "Open Link": "فتح الرابط",
     "Message Search": "بحث في الرسائل",
     "Search Messages": "البحث عن الرسائل",
     "No Messages Found": "لم يتم العثور على رسائل",
