--- a/message_settings.json
+++ b/message_settings.json
@@ -59,6 +59,8 @@
     "Text Message": "رسالة نصية",
     "Media Message": "رسالة وسائط",
     "File Message": "رسالة ملف",
+    "Upload a File": "تحميل ملف",
+    "Create Poll": "إنشاء استطلاع رأي",
     "Modify Attachment": "تعديل المرفق",
     "Spoiler Attachment": "حرق المرفق",
     "Send Media Message": "إرسال رسالة وسائط",
