--- a/user_settings.json
+++ b/user_settings.json
@@ -92,6 +92,8 @@
     "Manage Account": "إدارة الحساب",
     "Manage Privacy": "إدارة الخصوصية",
     "Manage Safety": "إدارة الأمان",
+    "Switch Accounts": "تبديل الحسابات",
+    "Manage Accounts": "إدارة الحسابات",
     "Manage Voice & Video": "إدارة الصوت والفيديو",
     "Chat Font Scaling": "ضبط حجم خط الدردشة",
     "Space Between Message Groups": "المسافة بين مجموعات الرسائل",
